Fix spacing between the buttons in the EnergyTable Component

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -50,6 +50,7 @@
   max-height: 20px;
   font-size: 11px;
   padding-top: .5%;
+  margin-left: 1px;
 }
 
 .energy-table-row {
